2008-10-15  Kenneth Russell  <kenneth.russell@sun.com>

        Reviewed and landed by Anders Carlsson.

        https://bugs.webkit.org/show_bug.cgi?id=21572
        
        Initialize pluginFunc.size to the correct size before calling NP_GetEntryPoints.
        
        * Plugins/WebNetscapePluginPackage.m:
        (-[WebNetscapePluginPackage load]):

2008-10-15  Mark Rowe  <mrowe@apple.com>

        Reviewed by Dan Bernstein.

        <rdar://problem/6272508> Crash occurs after loading flash content at http://www.macrumors.com/

        Restore some code related to the CoreGraphics drawing model that was misplaced in r37131.

        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView invalidateRegion:]):
        (-[WebBaseNetscapePluginView setVariable:value:]):

2008-10-15  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Cameron Zwarich.

        Fixed https://bugs.webkit.org/show_bug.cgi?id=21345
        Start the debugger without reloading the inspected page

        * WebInspector/WebInspector.mm:
        (-[WebInspector startDebuggingJavaScript:]): Updated for rename.

2008-10-14  Maxime Britto  <britto@apple.com>

        Reviewed by Darin Adler.

        Added SPI to use WebCore's TextIterator with WebKit.

        * WebView/WebTextIterator.h: Added.
        * WebView/WebTextIterator.mm: Added.
        (-[WebTextIteratorPrivate dealloc]):
        (-[WebTextIterator dealloc]):
        (-[WebTextIterator initWithRange:]): Creates a TextIterator 
        instance
        (-[WebTextIterator advance]): Asks the iterator to advance() .
        (-[WebTextIterator currentNode]): Returns the current DOMNode from 
        the iterator
        (-[WebTextIterator currentText]): Returns the current text from the 
        iterator
        (-[WebTextIterator atEnd]): Indicated whether the iterator has 
        reached the end of the range.
        * WebView/WebView.h:
        * WebView/WebView.mm: